Fix for asset overlay z-index.

--- a/scss/components/assets/ui/_overlay.scss
+++ b/scss/components/assets/ui/_overlay.scss
@@ -78,7 +78,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 999;
+    z-index: 2000;
 
     transition: opacity 0.25s linear;
 
